--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,9 @@ dependencies:
   crypto: ^3.0.1
 
   tencent_calls_engine: ">=2.5.0 <2.6.0"
-  tencent_cloud_uikit_core: ^1.7.1
+  tencent_cloud_uikit_core:
+    git:
+      url: https://github.com/xionghaoo/tencent_cloud_uikit_core.git
   tencent_cloud_chat_sdk:
     git:
       url: https://github.com/xionghaoo/tencent_cloud_chat_sdk.git
